@@ -2,7 +2,7 @@
 extends =
     http://svn.gocept.com/repos/gocept/gocept.lxml/trunk/buildout-lxml.cfg
     http://svn.gocept.com/repos/gocept/zopeversions/zope-stable.cfg
-parts = libxml2 libxslt lxml test migrate-content-types profile
+parts = libxml2 libxslt lxml test profile
 develop = .
 find-links = http://download.zope.org/distribution/
              http://uter.gocept.com/mirror/
@@ -17,12 +17,6 @@ environment = testenv
 [testenv]
 connector-url = http://zip6.zeit.de:9000/cms/work/
 search-connector-url = http://zip6.zeit.de:9999/
-
-[migrate-content-types]
-recipe = zc.recipe.egg:scripts
-eggs = zeit.connector
-scripts = migrate-content-types
-arguments = 'http://zip6.zeit.de:9000/cms/work/'
 
 [profile]
 recipe = zc.recipe.testrunner
